--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
+    "@react-three/drei": "^9.77.0",
+    "@react-three/fiber": "^8.13.3",
+    "@react-three/postprocessing": "^2.14.11",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
+    "gsap": "^3.12.1",
+    "lamina": "^1.1.23",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.13.0",
-    "sass": "^1.63.4"
+    "recharts": "^2.7.1",
+    "sass": "^1.63.4",
+    "three": "^0.153.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
